--- a/index.html
+++ b/index.html
@@ -10,63 +10,32 @@
 
 	<body ng-app="AddressBookApp">
 
-		<div ng-controller="AddressCtrl">
+			<div ng-include="'partials/navbar.html'"></div>
 
-			<div class="row">
-				<div class="col-xs-6 col-xs-offset-3">
-					<button class="col-xs-6 btn btn-warning" ng-click="newAddress()">Add Address</button>
-					<button class="col-xs-6 btn btn-info" ng-click="showAllAddresses()">Show All Addresses</button>
-				</div>
-			</div>
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-8 col-xs-offset-2" ng-view>
 			
-			<div class="row">
-				<div class="col-xs-8 col-xs-offset-2">
-
-					<div ng-show="!showListView">
-						<h3>Add Address</h3>
-							<form>
-                                <div class="form-group">
-                                    <label>Enter Street Address</label>
-                                    <input type="text" class="form-control" placeholder="123 Main Street" ng-model="addedAddress.street_address"/>
-                                </div>
-                                <div class="form-group">
-                                    <label>Name</label>
-                                    <input type="text" class="form-control" placeholder="Jane Doe" ng-model="addedAddress.name"/>
-                                </div>
-                                <button class="btn btn-default" ng-click="addNewAddress()">Submit</button>
-                            </form>
 					</div>
-
-
-
-					<div ng-show="showListView">
-						<h3>Address Book</h3>
-						<input type="text" name="" placeholder="Search Address Book" ng-model="searchText">
-						<div ng-repeat="address in addresses | filter: searchText">
-					        <div class="panel panel-default">
-					            <div class="panel-body">
-					                <div class="col-xs-8">{{address.street_address}}</div>
-					                <div class="col-xs-3">{{address.name}}</div>            
-					                <div class="col-xs-1"><button class="btn btn-danger fa fa-trash-o"></button></div>
-					            </div>
-					        </div>
-					    </div>
-					</div>
-		
 				</div>
 			</div>
-
-
-
-		</div>
 
 	<script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
 	<script type="text/javascript" src="./lib/bower_components/jquery/dist/jquery.js"></script>
 	<script type="text/javascript" src="./lib/bower_components/bootstrap/dist/js/bootstrap.js"></script>
 	<script type="text/javascript" src="./lib/bower_components/angular/angular.min.js"></script>
+	<script type="text/javascript" src="./lib/bower_components/angular-route/angular-route.min.js"></script>
+
 	<script type="text/javascript" src="javascripts/app.js"></script>
+	<script type="text/javascript" src="javascripts/AppConfig.js"></script>
 	<script type="text/javascript" src="javascripts/AppConstants.js"></script>
-	<script type="text/javascript" src="javascripts/main.js"></script>
+<!-- 	<script type="text/javascript" src="javascripts/main.js"></script> -->
+	<script type="text/javascript" src="javascripts/factories/AddressFactory.js"></script>	
+	<script type="text/javascript" src="javascripts/controllers/NavCtrl.js"></script>
+	<script type="text/javascript" src="javascripts/controllers/AddressListCtrl.js"></script>
+	<script type="text/javascript" src="javascripts/controllers/AddressEditCtrl.js"></script>
+	<script type="text/javascript" src="javascripts/controllers/AddressViewCtrl.js"></script>
+	<script type="text/javascript" src="javascripts/controllers/AddressNewCtrl.js"></script>
 	</body>
 
 </html>
